--- a/index.html
+++ b/index.html
@@ -435,9 +435,26 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-email-wrap">
+          <p class="footer-subtitle">Subscribe</p>
+          <input
+            type="email"
+            name="email-adress"
+            class="footer-email"
+            placeholder="E-mail"
+          />
+          <button class="subscribe-button" type="button">
+            Subscribe
+            <svg class="subscripe-icon" width="24" height="20">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="cross-icon" width="8" height="8">
