fixed div footer

--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
         </div>
 
         <div class="footer-email-wrap">
+          <p class="footer-modal-subtitle">Subscribe</p>
           <form class="footer-subscripe">
-            <label class="footer-subtitle"
-              >Subscribe
+            <label for="">
               <input
                 type="email"
                 name="email-adress"
@@ -447,18 +447,18 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-button" type="submit">
-              Subscribe
-              <svg class="subscripe-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
           </form>
+          <button class="subscribe-button" type="submit">
+            Subscribe
+            <svg class="subscripe-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="cross-icon" width="8" height="8">
