last 5 footer mistakes

--- a/index.html
+++ b/index.html
@@ -439,12 +439,13 @@
         <div class="footer-email-wrap">
           <p class="footer-modal-subtitle">Subscribe</p>
           <form class="footer-subscripe">
-            <label for="">
+            <label for="email-user">
               <input
                 type="email"
                 name="email-adress"
                 class="footer-email"
                 placeholder="E-mail"
+                id="email-user"
               />
             </label>
             <button class="subscribe-button" type="submit">
@@ -458,7 +459,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="cross-icon" width="8" height="8">
