--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               <input
                 type="email"
                 name="email-adress"
-                class="footer-email"
+                class="user-email-address"
                 placeholder="E-mail"
                 id="email-user"
               />
