fixed lable and span

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <div class="footer-email-wrap">
           <p class="footer-modal-subtitle">Subscribe</p>
           <form class="footer-subscripe">
-            <label for="email-user">
+            <label for="email-user" class="email-user-wrap">
               <input
                 type="email"
                 name="email-adress"
